Added missing introductions. Cleaned up cruft in pledges.

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -31,62 +31,28 @@
 \author[2]{Cecilia Aragon}\affil[2]{University of Washington -- Seattle, US}
 \author[3]{Christoph Becker}\affil[3]{University of Toronto, Canada}
 \author[4]{Jeffrey Carver}\affil[4]{University of Alabama, US}
-\author[5]{Andrei Chi\c{s}}\affil[5]{University of Bern, Switzerland}
+\author[5]{Andrei Chi\c{s}}\affil[5,21]{~University of Bern, Switzerland}
 \author[6]{Benoit Combemale}\affil[6]{IRISA -- Rennes, France}
 \author[7]{Mike Croucher}\affil[7]{University of Sheffield, UK}
 \author[8]{Kevin Crowston}\affil[8]{Syracuse University, US}
 \author[9]{Daniel Garijo}\affil[9]{Technical University of Madrid, Spain}
 \author[10]{Ashish Gehani}\affil[10]{SRI -- Menlo Park, US}
-\author[11]{Carole Goble}\affil[11]{University of Manchester, UK}
-\author[12]{Robert Haines}\affil[12]{University of Manchester, UK}
-\author[13]{Robert Hirschfeld}\affil[13]{Hasso-Plattner-Institut -- Potsdam, Germany}
-\author[14]{James Howison}\affil[14]{University of Texas at Austin, US}
+\author[11]{Carole Goble}\affil[11,12,16]{~University of Manchester, UK}
+\author[12]{Robert Haines}%\affil[12]{University of Manchester, UK}
+\author[13]{Robert Hirschfeld}\affil[13]{~Hasso-Plattner-Institut -- Potsdam, Germany}
+\author[14]{James Howison}\affil[14,24]{~University of Texas at Austin, US}
 \author[15]{Katy Huff}\affil[15]{University of California Berkeley, US}
-\author[16]{Caroline Jay}\affil[16]{University of Manchester, UK}
-\author[17]{Daniel S. Katz}\affil[17]{University of Illinois Urbana-Champaign, US}
+\author[16]{Caroline Jay}%\affil[16]{University of Manchester, UK}
+\author[17]{Daniel S. Katz}\affil[17,22]{~University of Illinois Urbana-Champaign, US}
 \author[18]{Claude Kirchner}\affil[18]{INRIA -- Le Chesnay, France}
 \author[19]{Katie Kuksenok}\affil[19]{University of Washington -- Seattle, US}
 \author[20]{Ralf L\"{a}mmel}\affil[20]{Universit\"{a}t Koblenz-Landau, Germany}
-\author[21]{Oscar Nierstrasz}\affil[21]{University of Bern, Switzerland}
-\author[22]{Matt Turk}\affil[22]{University of Illinois Urbana-Champaign, US}
+\author[21]{Oscar Nierstrasz}%\affil[21]{University of Bern, Switzerland}
+\author[22]{Matt Turk}%\affil[22]{University of Illinois Urbana-Champaign, US}
 \author[23]{Rob van Nieuwpoort}\affil[23]{VU University Amsterdam, The Netherlands}
-\author[24]{Matthew Vaughn}\affil[24]{University of Texas at Austin, US}
+\author[24]{Matthew Vaughn}%\affil[24]{University of Texas at Austin, US}
 \author[25]{Jurgen Vinju}\affil[25]{CWI -- Amsterdam, The Netherlands}
 
-%
-%\author[1]{Alice Allen}\affil[1]{University of Maryland -- College Park, US. \texttt{aallen@astro.umd.edu}}
-%\author[2]{Cecilia Aragon}\affil[2]{University of Washington -- Seattle, US. \texttt{aragon@uw.edu}}
-%\author[3]{Christoph Becker}\affil[3]{University of Toronto, Canada. \texttt{christoph.becker@utoronto.ca}}
-%\author[4]{Jeffrey Carver}\affil[4]{University of Alabama, US. \texttt{carver@cs.ua.edu}}
-%\author[5]{Andrei Chi\c{s}}\affil[5]{University of Bern, Switzerland. \texttt{andrei@inf.unibe.ch}}
-%\author[6]{Benoit Combemale}\affil[6]{IRISA -- Rennes, France. \texttt{benoit.combemale@irisa.fr}}
-%\author[7]{Mike Croucher}\affil[7]{University of Sheffield, UK. \texttt{m.croucher@sheffield.ac.uk}}
-%\author[8]{Kevin Crowston}\affil[8]{Syracuse University, US. \texttt{crowston@syr.edu}}
-%\author[9]{Daniel Garijo}\affil[9]{Technical University of Madrid, Spain. \texttt{dgarijo@isi.edu}}
-%\author[10]{Ashish Gehani}\affil[10]{SRI -- Menlo Park, US. \texttt{ashish.gehani@sri.com}}
-%\author[11]{Carole Goble}\affil[11]{University of Manchester, UK. \texttt{carole.goble@manchester.ac.uk}}
-%\author[12]{Robert Haines}\affil[12]{University of Manchester, UK. \texttt{robert.haines@manchester.ac.uk}}
-%\author[13]{Robert Hirschfeld}\affil[13]{Hasso-Plattner-Institut -- Potsdam, Germany. \texttt{robert.hirschfeld@hpi.de}}
-%\author[14]{James Howison}\affil[14]{University of Texas -- Austin, US. \texttt{jhowison@ischool.utexas.edu}}
-%\author[15]{Katy Huff}\affil[15]{University of California -- Berkeley, US. \texttt{katyhuff@gmail.com}}
-%\author[16]{Caroline Jay}\affil[16]{University of Manchester, UK. \texttt{caroline.jay@manchester.ac.uk}}
-%\author[17]{Dan Katz}\affil[17]{University of Illinois at Urbana Champaign, US. \texttt{dskatz@illinois.edu}}
-%\author[18]{Claude Kirchner}\affil[18]{INRIA -- Le Chesnay, France. \texttt{claude.kirchner@inria.fr}}
-%\author[19]{Katie Kuksenok}\affil[19]{University of Washington -- Seattle, US. \texttt{Katerena.Kuksenok@gmail.com}}
-%\author[20]{Ralf L\"{a}mmel}\affil[20]{Universit\"{a}t Koblenz-Landau, Germany. \texttt{laemmel@uni-koblenz.de}}
-%\author[21]{Oscar Nierstrasz}\affil[21]{University of Bern, Switzerland. \texttt{oscar@inf.unibe.ch}}
-%\author[22]{Matt Turk}\affil[22]{University of Illinois at Urbana Champaign, US. \texttt{matthewturk@gmail.com}}
-%\author[23]{Rob van Nieuwpoort}\affil[23]{VU University Amsterdam, The Netherlands. \texttt{rob@cs.vu.nl}}
-%\author[24]{Matthew Vaughn}\affil[24]{University of Texas -- Austin, US. \texttt{vaughn@tacc.utexas.edu}}
-%\author[25]{Jurgen Vinju}\affil[25]{CWI -- Amsterdam, The Netherlands. \texttt{Jurgen.Vinju@cwi.nl}}
-
-
-%\author[1]{Long list of authors}
-%%\author[2]{Joan R. Access}
-%\affil[1]{Dummy University Computing Laboratory, Dummy Country
-%  \texttt{open@dummyuni.org}}
-%%\affil[2]{Department of Informatics, Dummy College Address, Country
-%%  \texttt{access@dummycollege.org}}
 \authorrunning{A. Allen et al.}%optional
 
 \subjclass{Dummy classification: please check \url{http://www.acm.org/about/class/ccs98-html}. Cite, for example, as:  ``B.3.3 Performance Analysis and Design Aids, C.1.2 Multiple Data Stream Architectures (Multiprocessors)''}% mandatory: Please choose ACM 1998 classifications from http://www.acm.org/about/class/ccs98-html . \eg cite as "F.1.1 Models of Computation". 
@@ -114,81 +80,56 @@
 
 
 % ==================================================
-\newpage
+%\newpage
 % \input{editmacros.tex}
 
 % ==================================================
 \begin{abstract}
 Software is often a critical component of scientific research.
-%It is used both as academic research results and as part of academic research methods. 
 It can be a component of the academic research methods used to produce research results, or it may itself be an academic research result.
 Software, however, is rarely considered to be a citable artifact in its own right.
 With the advent of open-source software, artifact evaluation committees of conferences, and journals that include source code and running systems as part of the published artifacts, we foresee that software will increasingly be part of the academic process.
 The quality of this software must be accounted for, both a priori and a posteriori.
 
 The Dagstuhl perspectives seminar on ``Engineering Academic Software'' has examined the strengths, weaknesses, risks and opportunities of academic software engineering. A key outcome of the seminar is this manifesto, serving as a roadmap towards future professional software engineering for software-based research instruments and other software produced and used in an academic context.
+The manifesto is expressed in terms of a series of actionable ``pledges'' that users and developers of academic research software can take as concrete steps towards improving the environment in which that software is produced.
 \end{abstract}
 
 % ==================================================
 %:=== Executive Summary ===
 \section*{Executive Summary}
 % \summaryauthor and \license is optional
-%\summaryauthor[John Q. Open and Joan R. Access]{%
-%John Q. Open\\
-%Joan R. Access
+%\summaryauthor[Alice Allen et al.]{%
+%Alice Allen
+%et al.
 %}
 %\license
 
-%:===> TODO -- EXECUTIVE SUMMARY <===
+Although the role of software is growing increasingly important in diverse fields of research, it is commonly not given its due recognition. Software is often not cited, or even considered to be citable. Developers of research software are not given due credit, and may not be invited as co-authors on papers disseminating the research that their software enabled.
+This Dagstuhl perspectives seminar
+explored the \emph{current state} of engineering of academic research software,
+identified common \emph{problems} with its development, recognition and sustainability,
+proposed a set of concrete \emph{actions} to improve the state of academic research software, expressed as a number of personal \emph{pledges},
+and
+put forward numerous \emph{future research directions} to better understand and support academic software.
 
-\todo{
-1-2 pages TLDR.
-Summarize the main outcomes.\\
-Software is growing more important in research but is typically not given due recognition\\
-Explain the categories of pledges.\\
-Explain how the pledges are all intended to be actionable.\\
-Fill this in as the rest starts to stabilize.\\
-Need to recognize software as citable.\\
-Need to acknowledge formally the role of a ``research software engineer''\\
-}
-
-%\on{Here I picked just one of the pledges of each group of five. Otherwise 18 pledges will be too many for the TLDR.}
-
-\on{Terms that need to be defined/introduced:\\
-- Research Software Engineer\\
-- intellectual contribution of software\\
-- software sustainability\\
-}
-
-% By ``sustainability'' we mean the \emph{capacity to endure}. Software is sustainable if it will continue to be available in the future, on new platforms, and meeting new needs. 
+The personal pledges expressed in this manifesto address three general concerns:
+(i) ensuring that research software is properly \emph{cited};
+(ii) promoting the \emph{careers} of research software engineers who develop academic software;
+and
+(iii) ensuring the quality and sustainability of software during its \emph{development}:
 
 % ----------
 \paragraph{Citation}
 \begin{itemize}
 \item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to do so as well.
-%\item I will properly cite software used to produce my research results.
-%\item When reviewing, I will require others to properly cite software used to produce research results.
-%\item I will actively encourage funding agencies to include software experts in their review processes.
 \end{itemize}
 
 % ----------
 \paragraph{Careers}
 \begin{itemize}
 \item I will recognize software contributions in hiring and promotion within my institution, and encourage others in my institution to do the same.
-%\item I will recognize software contributions in hiring and promotion within my institution.
-%\item I will recognize software contributions at conferences by proposing dedicated sessions and prizes.
 \end{itemize}
-
-% ----------
-%\paragraph{Making intellectual content visible}
-%\begin{itemize}
-%\item I will publish the intellectual contributions of my research software.
-%
-%\on{not clear at all what are "intellectual contributions"}
-%\item I will distinguish the intellectual contribution of my software from its service contribution.
-%\item I will invite developers of software that enables research to be co-authors on papers about that research.
-%\item I will publish how I organize and run my software projects.
-%\end{itemize}
 
 % ----------
 \paragraph{Development}
@@ -196,30 +137,7 @@ Need to acknowledge formally the role of a ``research software engineer''\\
 \item I will document (including usage instructions, and input and output examples), package, release and archive versions of my software, and I will publish the intellectual contributions of my research software.
 \item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
 \item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help scientists improve the quality of their software without passing judgment.
-%\item I will develop software as open source from the start, whenever possible.
-% WAS: I will develop software in the open from the start, whenever possible.
-
-% \on{kinda complicated. howzabout "i will choose an open source license ..." }
-
-%\item I will acknowledge that reading and understanding source code is a legitimate part of the academic discussion.
-%\item I will match proposed software engineering practices to the actual needs and resources of the project.
-%\item I will help scientists improve the quality of their software without passing judgment.
-%\item I will document my academic software, including usage instructions, and input and output examples.
 \end{itemize}
-
-% ----------
-%\paragraph{Sustainability}
-%\begin{itemize}
-%\item I will contribute to sustaining software I use and rely on. 
-%
-%\on{"sustaining" is confusing and hard to parse. (Are we sustaining the software, or is it the software that is doing the sustaining?)}
-%\katznote{we want to sustain the software --- if we need to make changes to make it run, we will push those changes back for others to use (incremental updating).  If we can fix the documentation to clarify something, we will.  Etc.}
-%%\item I will package, release and archive versions of my software.
-%%\item I will make explicit how to cite my software.
-%%\item I will consider and document the sustainability of my research software as thoroughly as its function.
-%\end{itemize}
-
-
 
 % ==================================================
 \tableofcontents
@@ -231,9 +149,14 @@ Need to acknowledge formally the role of a ``research software engineer''\\
 %\on{NB: adapted from the proposal}
 \emph{Academia is software driven.} As software is becoming a pervasive technology for automating and innovating every aspect of the human condition (work, play, love and war), it is also embedded firmly in the academic world. On the one hand, in computer science, and in software engineering research in particular we see experimental software and toolkits emerge continuously, either as part of the \emph{output} of research effort, or as part of the \emph{research method}. On the other hand, in general it may be that software is used even more actively in other fields of research such as mathematics, biology, particle physics, astronomy, medicine, and law. Here too, we can distinguish software that is part of the output (\ie development of innovative production techniques) from software that contributes to the research methods. 
 
-There is an explosion of available open-data online which is accessed and analysed through the creation of new software --- generating more data to analyse. We focus on the impact of the quality of this software, \ie any software that acquires, cleanses, stores, annotates, transforms, filters, generates (\etc) research data.
+There is an explosion of available open-data online which is accessed and analysed through the creation of new software --- generating more data to analyse. We focus on the \emph{sustainability} of this software, \ie any software that acquires, cleanses, stores, annotates, transforms, filters, generates (\etc) research data.
+By ``sustainability'' we mean the \emph{capacity to endure}. Software is sustainable if it will continue to be available in the future, on new platforms, and meeting new needs. 
+
 
 The perspective of this seminar is that of \emph{the research team developing and/or using academic software.} 
+A key role is that of the \emph{research software engineer} (RSE), the person with expertise both in academic research, and in the software engineering tools and technology needed to build the software used in the research, and to make it sustainable.
+In this context it is critical that the \emph{intellectual contribution of software} be recognized and actively supported.
+
 As software is becoming integral to our processes, the tools we use, and the output we produce, this perspective provides a starting point for a discussion that is both timely and pressing:
 
 \begin{itemize}
@@ -244,7 +167,6 @@ As software is becoming integral to our processes, the tools we use, and the out
 %\ins{``Sustainability'' refers not only to the qualities of a piece of software that contribute to its maintainability, but also commitment to processes and resources that will ensure that software's life beyond the scope of a single research project.}
 %\on{ok?}
 %\katznote{I like sustainability defined as the capacity to endure. For software, sustainability means the software will continue to be available in the future, on new platforms, meeting new needs.}
-By ``sustainability'' we mean the \emph{capacity to endure}. Software is sustainable if it will continue to be available in the future, on new platforms, and meeting new needs. 
 Are we certain to be able reproduce previous research methods in the future under arbitrary changes to the technological contexts (machines, operating systems, programming languages frameworks)? Are we able to incrementally adapt research software to emerging opportunities at the same time, without loss of reproducibility and without incurring prohibitive cost?
 \item \emph{Is the software process we use fit for the quality we expect?} How can we optimize it in a unique academic context without losing quality? What tools and processes exist to help with this balance? What investments are necessary to discover it?
 \item \emph{How can we secure academic software quality?} How can we monitor, steer, report on and review academic software quality? How can we manage and secure trust between academic research teams considering software developed for output and or research methods?
@@ -256,17 +178,13 @@ What is required in terms of long term funding, education and infra-structure to
 
 The goals of the seminar have been to plan how to widen and deepen the impact of software engineering knowledge in research labs across the globe and to prioritize pressing open questions for the software engineering community with respect to research software.
 
-% ==================================================
-%:=== PLEDGES ===
-\section{Responsible Academic Software Development}
+A key result of this seminar has been to identify a number of concrete \emph{actions} to be taken by researchers involved in the use, production, and evaluation of academic software. These actions are expressed as a series of personal \emph{pledges} that researchers are encouraged to take and follow.
 
-\on{There are still too many pledges, and several are rather confusing. Can we merge and simplify them?}
-
-\todo{Need some intro text.
-Explain what motivates these pledges.
-Pledges are intended to be ``actionable.''
-Why the five categories?
-Explain that we first list the pledges, and then follow with detailed discussions below.}
+The pledges are organized into three groups, dealing with:
+(i) ensuring that research software is properly \emph{cited};
+(ii) promoting the \emph{careers} of research software engineers who develop academic software;
+and
+(iii) ensuring the quality and sustainability of software during its \emph{development}:
 
 % ----------
 \paragraph{Citation}
@@ -283,19 +201,17 @@ Explain that we first list the pledges, and then follow with detailed discussion
 % ----------
 \paragraph{Development}
 \begin{itemize}
-\item I will publish the intellectual contributions of my research software, and
-I will document (including usage instructions, and input and output examples), package, release and archive versions of my software
+\item I will document (including usage instructions, and input and output examples), package, release and archive versions of my software, and I will publish the intellectual contributions of my research software.
 \item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
 \item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help scientists improve the quality of their software without passing judgment.
 \end{itemize}
 
+Below we discuss, for each pledge, the \emph{background} motivating the pledge, possible \emph{contradictions or concerns} pose challenges for the pledge, \emph{what actions are needed}, what impact these actions are expected to bring, and who else needs to take action.
+
+
 %:=== DISCUSSION OF PLEDGES ===
 % --------------------------------------------------
-\subsection{Citation}
-
-\todo{intro needed?}
-
-\on{In the intro we need to introduce the notion of an RSE}
+\subsection*{Citation}
 
 % ----------
 \paragraph{I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to do so as well.}
@@ -303,8 +219,6 @@ I will document (including usage instructions, and input and output examples), p
 \emph{Background.} When a scholarly work relies on specific software, it should cite that software, to give credit to the creators of that software, to support reproducibility, and to provide a more complete understanding of the scholarly work.
 This is important in order to raise the bar for transparency in academic work, and to recognize software as a research object worthy of exposure to peer review. This requirement by reviewers will help to strengthen the call for increased openness, transparency, and verifiability of software used in science. As researchers are motivated by pressure to publish, reviewers are uniquely able to apply pressure where rigor is needed. Previous work on this topic includes the Open Science Peer Review Oath~\cite{aleksic_open_2015}.
 % http://f1000research.com/articles/3-271/v2
-
-
 
 \emph{Contradictions or concerns.}
 Research might use a lot of software, so reference sections could potentially be cluttered with unhelpful citations (\eg citing all of the libraries used by some package). 
@@ -331,26 +245,22 @@ Reviewers need to take software seriously, and when a piece of software is menti
 Authors need guidance about when to cite software (\ie which software should be cited) and how to cite software (\ie citation formats that will be picked up by citation tracking systems). 
 
 Why would those small actions have impact? If software citations add to a scholar's h-index, it can be beneficial for the authors. Readers of a paper seeking to build on the published work will have more concrete information about how the work was done. 
+Effort by the reviewers should \emph{trickle up} to journal editors and \emph{trickle down} to research authors.
+By requiring authors to provide these links, we will work towards educating the community to produce reusable software. Or at least, a set of tests that work for the reviewers of the publication. 
 
 Who else needs to act? Publishers need to agree to citations being included in publications. Software authors need to provide information about how their software should be cited. Citation tracking systems need to include software citations. 
+Editors and authors too will need to begin to hold their colleagues to this standard in order for this to become a community norm.
+Conference chairs/journal editors may add this requirement explicitly when when publishing a call for papers. 
 
-\todo{What are examples of what and what not to cite? Also, there might be differences in granularity that should be considered...}
-\katznote{see \S5.1 of \url{https://peerj.com/preprints/2169/} for some discussion on this}
+%\todo{What are examples of what and what not to cite? Also, there might be differences in granularity that should be considered...}
+%\katznote{see \S5.1 of \url{https://peerj.com/preprints/2169/} for some discussion on this}
 
-Why would those small actions have impact? This effort by the reviewers should \emph{trickle up} to journal editors and \emph{trickle down} to research authors.
 
-Who else needs to act? Editors and authors too will need to begin to hold their colleagues to this standard in order for this to become a community norm.
-
-Why would those small actions have impact? By requiring authors to provide these links, we will work towards educating the community to produce reusable software. Or at least, a set of tests that work for the reviewers of the publication. 
-
-Who else needs to act? Conference chairs/journal editors may add this requirement explicitly when when publishing a call for papers. 
 
 %\todo{Note: We will need good (and diverse enough) examples for how to properly cite software.}
 
 % --------------------------------------------------
-\subsection{Careers}
-
-\todo{intro needed?}
+\subsection*{Careers}
 
 % ----------
 \paragraph{I will recognize software contributions in hiring and promotion within my institution.}
@@ -386,7 +296,7 @@ Who else needs to act?
 These actions should help to drive change in the university at higher levels and will involve the actions of higher level administrators.
 
 % --------------------------------------------------
-\subsection{Development}
+\subsection*{Development}
 
 % ----------
 \paragraph{I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software}
@@ -434,7 +344,7 @@ Some projects are intended to be long-lived and widely usable; others are intend
 
 Initially developing software in closed fora often loses the benefits of open source processes. This includes allowing others to determine whom to credit and follow up regarding technical details. Open access allows developers to adapt code to related contexts. It allows a community of users to share the costs of sustaining the resource. Users can determine how well it fits their needs by inspecting details that are not visible from the external interfaces. In contexts where the quality of the software is critical, open access facilitates verification of correctness. Similarly, security flaws can be identified by a larger group, enabling earlier resolution.
 
-Starting as you intend to continue is important, because projects have their own momentum; it is far more difficult to change once you have established practices and infrastructure. Indeed transitioning from a typical, co-located, PI-directed software development process to an open process involves substantial organizational change across at least three dimensions 1) Governance and Leadership, 2) Collaboration infrastructure, and 3) Contribution processes (Howison, 2014). \todo{change this to a proper citation}
+Starting as you intend to continue is important, because projects have their own momentum; it is far more difficult to change once you have established practices and infrastructure. Indeed transitioning from a typical, co-located, PI-directed software development process to an open process involves substantial organizational change across at least three dimensions (i) Governance and Leadership, (ii) Collaboration infrastructure, and (iii) Contribution processes (Howison, 2014). \todo{replace by proper citation}
 
 A commonly used argument for not releasing the code associated with a research paper into the wild is that the code is ``bad'' and the scientist will be judged negatively based on the bad quality of the code.
 %\meh{Dismissive, uncharitable comments about existing code, as well as identifying a component that is ``easy'' to ``just'' do in some particular way.}
@@ -507,13 +417,14 @@ Time constraints (\eg introduced by sprints, workshops, hackathons) can help mit
 
 If I am in the position of assessing the context or suggesting a solution, I will not only focus on the things I am most excited about (the shiny new tool) but make an effort to hear what the scientists/users are excited about, and ways the best parts of existing process and enthusiasm can be channelled into sustained productivity.
 
+\newpage
 % ==================================================
 %:=== Future Research Directions ===
 \section{Future Research Directions}
 
 The research areas outlined below are concerned with gaining a deeper understanding of both the process and the output of research software engineering activities. Because both tools and practices change so rapidly, and because such a wide diversity of these exists across different scientific disciplines and contexts, the overarching challenge is to understand how findings about specific projects or groups relate to broader trends over time. The research agenda includes developing ways to measure meaningful aspects of both practice and output of scientific programming and questions regarding design and development of tools to support aspects of relevant activities.
 
-\on{Not all of these directions are described at the same level of detail. Some need to be expanded, and other probably deleted (or merged).}
+%\on{Not all of these directions are described at the same level of detail. Some need to be expanded, and other probably deleted (or merged).}
 
 % --------------------------------------------------
 \subsection{Quantifying the state of scientific software availability.}
@@ -530,16 +441,16 @@ Specific questions to be addressed:
 % --------------------------------------------------
 \subsection{Sustainability of software experimentation}
 
-Reproducibility of scientific experiments with major computational components requires prepared environments that will, in principle, allow experiments to be redone in 2, 10, 100 and perhaps even 1000 years. We envision a future in which programs should be rerunnable and feel as persistent as email seems today. A journal like IPOL\footnote{\url{http://www.ipol.im}}, for example, allows authors to publish a paper together with a runnable program, at least on the current machine available in 2016. Jupyter Notebook\footnote{\url{http://jupyter.org}} allows all necessary components and dependencies to be bundled. To extend the persistence of software execution across environments and tools opens new research tracks in the rapidly changing hardware and software environments that we currently live with
+Reproducibility of scientific experiments with major computational components requires prepared environments that will, in principle, allow experiments to be redone in 2, 10, 100 and perhaps even 1000 years. We envision a future in which programs should be rerunnable and feel as persistent as email seems today. A journal like IPOL\footnote{\url{http://www.ipol.im}}, for example, allows authors to publish a paper together with a runnable program, at least on the current machine available in 2016. Jupyter Notebook\footnote{\url{http://jupyter.org}} allows all necessary components and dependencies to be bundled. To extend the persistence of software execution across environments and tools opens new research tracks in the rapidly changing hardware and software environments that we currently live with.
 
 The following specific questions need to be addressed:
 
 \begin{itemize}
 \item What we would like to have as a research environment for reproducibility, including  software and data, 10 years from now? 
 \item How to design and implement a virtual machine for forever-sustainable executable environments? 
-\item How to deal with software legacy in the long term, in particular
+\item How to deal with software legacy in the long term, in particular:
     \begin{itemize}
-    \item De-optimization, porting, refactoring of academic software
+    \item De-optimization, porting, refactoring of academic software?
     \item Translation of legacy data formats?
     \end{itemize}
 \end{itemize}
@@ -571,9 +482,11 @@ Many common tools that embody SE best practices are not written for scientists. 
 \item How can tool design bring what SE already knows (\eg about testing, debugging, reproducibility) to bear into the scientific context?
 \item How are different tools augmenting programmer cognition?
 \item Develop typologies of software and corresponding design requirements. For example:
+\begin{itemize}
 \item Support of ``what-if'' scenarios
 \item Multi-scale interaction --- capability to ``zoom'' in and out of levels of abstraction
 \item Avoid independent co-evolution
+\end{itemize}
 \end{itemize}
 
 % --------------------------------------------------
@@ -620,29 +533,6 @@ Claims of cost of hidden software or infrastructure maintenance remain (often) a
 \end{itemize}
 
 % --------------------------------------------------
-\subsection{What is the invisible work of engineering academic software?}
-
-
-\begin{itemize}
-\item The human side
-\item Why is it persistently not acknowledged
-\end{itemize}
-
-% --------------------------------------------------
-\subsection{Metaphor, language, and contextuality}
-
-% --------------------------------------------------
-\subsection{Software as communication}
-
- ????
-
-
-% --------------------------------------------------
-\subsection{What's different about research software outside the sciences --- e.g. in humanities?}
-
-(a fuzzy question at this point)
-
-% --------------------------------------------------
 \subsection{Analysis of scientific software ecosystem metadata}
 
 With better metadata about projects we can pursue systems that provide insight into the scientific software ecosystem.
@@ -659,9 +549,6 @@ Specific questions in the area of ecosystem analysis and metadata are:
 \item Can we motivate software developers to improve metadata by pushing 
 \item Metrics of software: how can quantify and measure code meaningfully
 \end{itemize}
-
-% --------------------------------------------------
-\subsection{Techniques/metrics for evaluating the likely success and impact of proposed / nascent academic software projects}
 
 % --------------------------------------------------
 \subsection{Re-tooling the bibliographic software toolchain for software citation}
@@ -711,58 +598,49 @@ Many are more focused on the practice of reproducible software development for r
 
 
 % ----------
-\manifesto{Science Code Manifesto}~\cite{nick_barnes_science_2013}
-(\url{http://sciencecodemanifesto.org/})
+\manifesto{Science Code Manifesto}~\cite{nick_barnes_science_2013}\footnote{\url{http://sciencecodemanifesto.org/}}
 Focuses on ``source code written to specifically process data for a published paper.''
 Therefore, may only cover a portion of the types of software of interest (e.g. from the wording it appears that software that produces scientific data may not be included here).
 It does cover Code, Copyright, Citation, Credit, and Curation.
 The principles do not seem to be in conflict with our discussions this week
 
 % ----------
-\manifesto{Force 11 Software Citation principles}~\cite{arfon_m._smith_software_2016}
-(draft at \url{https://www.force11.org/software-citation-principles})
+\manifesto{Force 11 Software Citation principles}~\cite{arfon_m._smith_software_2016}\footnote{draft at 
+\url{https://www.force11.org/software-citation-principles}}
 emphasize persistence and clarity.
 
 % ----------
-\manifesto{Open Access Pledge}~\cite{alex_holcombe_open_2011}
-(\url{http://www.openaccesspledge.com/})
+\manifesto{Open Access Pledge}~\cite{alex_holcombe_open_2011}\footnote{\url{http://www.openaccesspledge.com/}}
 focuses on promising to publish software and papers in open access venues.
 Also notes an emphasis on contributing more.
 
 % ----------
-\manifesto{Open Science Peer Review Oath}
-(\url{http://f1000research.com/articles/3-271/v2})
+\manifesto{Open Science Peer Review Oath}\footnote{\url{http://f1000research.com/articles/3-271/v2}}
 focuses on leveraging one's power as a reviewer to demand open software access, reproducible practices, and transparent review ideals.
 
 % ----------
-\manifesto{Karlskrona Manifesto for Sustainability Design}~\cite{becker_karlskrona_2014}
-(\url{http://sustainabilitydesign.org/})
+\manifesto{Karlskrona Manifesto for Sustainability Design}~\cite{becker_karlskrona_2014}\footnote{\url{http://sustainabilitydesign.org/}}
 includes a broad definition of sustainability. In the technical sense, this is along the lines of WSSSPE, but it goes well beyond, including the environmental and social interpretations of sustainability.
 
 % ----------
-\manifesto{Astronomical Software Wants To Be Free: A Manifesto}~\cite{weiner_astronomical_2009}
-(\url{http://arxiv.org/abs/0903.3971})
+\manifesto{Astronomical Software Wants To Be Free: A Manifesto}~\cite{weiner_astronomical_2009}\footnote{\url{http://arxiv.org/abs/0903.3971}}
 emphasizes various principles that would improve the visibility and esteem of software within astronomy. It emphasizes structural incentives and adoption of values which recognize this. 
 
 % ----------
-\manifesto{UK RSE}~\cite{rse_conference_2016_what_2016}
-(\url{http://www.rse.ac.uk/who.html})
+\manifesto{UK RSE}~\cite{rse_conference_2016_what_2016}\footnote{\url{http://www.rse.ac.uk/who.html}}
 emphasizes the raising of awareness of the role of Research Software Engineers through communication and support of institutional incentives.
 Objectives of UKRSE: \url{http://www.rse.ac.uk/objectives.html}
 
 % ----------
-\manifesto{Reproducibility manifesto}~\cite{barba_reproducibility_2012}
-(\url{http://lorenabarba.com/gallery/reproducibility-pi-manifesto/})
+\manifesto{Reproducibility manifesto}~\cite{barba_reproducibility_2012}\footnote{\url{http://lorenabarba.com/gallery/reproducibility-pi-manifesto/}}
 includes terms to make software reusable by others. It is focused on reproducibility, leaving sustainability of software out of the question.
 
 % ----------
-\manifesto{The GeoScience paper of the future initiative}~\cite{onto_soft_what_2016}
-(\url{http://www.ontosoft.org/gpf/what-is-a-gpf})
+\manifesto{The GeoScience paper of the future initiative}~\cite{onto_soft_what_2016}\footnote{\url{http://www.ontosoft.org/gpf/what-is-a-gpf}}
 has a set of requirements for software to be included in a paper: ``with documentation, a license for reuse, and a unique and citable persistent identifier''. Differences with the scope of our seminar: it involves also data and its provenance, focusing more on the paper itself rather than the software.
 
 % ----------
-\manifesto{FAIR principles}~\cite{wilkinson_fair_2016}
-(\url{http://www.nature.com/articles/sdata201618})
+\manifesto{FAIR principles}~\cite{wilkinson_fair_2016}\footnote{\url{http://www.nature.com/articles/sdata201618}}
 includes focus on research data. The goal is to make them findable, accessible, interoperable and reusable. Can we apply these principles to software too?
 
 
