--- a/detritus.tex
+++ b/detritus.tex
@@ -1,5 +1,34 @@
 % !TEX root = dagstuhl-eas-manifesto.tex
 % ==========================================================
+\section*{Incomplete research directions}
+
+% --------------------------------------------------
+\subsection{What is the invisible work of engineering academic software?}
+
+
+\begin{itemize}
+\item The human side
+\item Why is it persistently not acknowledged
+\end{itemize}
+
+% --------------------------------------------------
+\subsection{Metaphor, language, and contextuality}
+
+% --------------------------------------------------
+\subsection{Software as communication}
+
+ ????
+
+
+% --------------------------------------------------
+\subsection{What's different about research software outside the sciences --- e.g. in humanities?}
+
+(a fuzzy question at this point)
+
+% --------------------------------------------------
+\subsection{Techniques/metrics for evaluating the likely success and impact of proposed / nascent academic software projects}
+
+% ==========================================================
 \section*{Brainstorming detritus}
 
 NB: keep until final version, then delete
